8158926: Char value is set as integer, not as character

Reviewed-by: ghb, kcr, mbilla