modules/web/src/main/native/Source/WebCore/platform/java/BridgeUtils.cpp
@@ -159,13 +159,6 @@ JSValueRef Java_Object_to_JSValue(
         jdouble value = env->CallDoubleMethod(val, doubleValueMethod);
         return JSValueMakeNumber(ctx, value);
     }
-    static JGClass clCharacter(env->FindClass("java/lang/Character"));
-    if (env->IsInstanceOf(val, clCharacter)) {
-        static jmethodID charValueMethod
-            = env->GetMethodID(clCharacter, "charValue", "()C");
-        return toRef(exec,
-            JSC::JSValue((int) env->CallCharMethod(val, charValueMethod)));
-    }
 
     JLObject valClass(JSC::Bindings::callJNIMethod<jobject>(val, "getClass", "()Ljava/lang/Class;"));
     if (JSC::Bindings::callJNIMethod<jboolean>(valClass, "isArray", "()Z")) {
@@ -176,6 +169,7 @@ JSValueRef Java_Object_to_JSValue(
         return toRef(exec, arr);
     }
     else {
+        // All other Java Object types including java.lang.Character will be wrapped inside JavaInstance.
         PassRefPtr<JSC::Bindings::JavaInstance> jinstance = JSC::Bindings::JavaInstance::create(val, rootObject, accessControlContext);
         return toRef(jinstance->createRuntimeObject(exec));
     }
